Fix bottom spacing of small masthead
Need to have no margin-bottom, to compensate for the vertical-align:
top we’re applying to the child elements so they align properly with
the slash ( / ) divider.

--- a/sass/site/_header.scss
+++ b/sass/site/_header.scss
@@ -33,7 +33,6 @@
 
 .site-header-single {
 	@include rem( "margin-top", $line );
-	@include rem( "margin-bottom", $line );
 	height: auto;
 	text-align: center;
 
