--- a/style.css
+++ b/style.css
@@ -1678,8 +1678,6 @@ a:active {
 	height: auto;
 	margin-top: 28px;
 	margin-top: 1.55556rem;
-	margin-bottom: 28px;
-	margin-bottom: 1.55556rem;
 	text-align: center;
 }
 .site-header-single a {
